# r7oss

./: README.md
G5/src/DirectFB-1.4.12.159_p11/docs/: Makefile.am  README.rle
G5/src/initng-0.6.10.2/tools/: CMakeLists.txt  create_links.cmake.in  killall5-ignore  mountpoint.c  sulogin.c
G5/src/libdbus-c++-0.6.0.154.0/: Makefile.am  configure.ac
G5/src/libdbus-c++-0.6.0.154.0/examples/: Makefile.am
G5/src/libdbus-c++-0.6.0.154.0/src/: connection.cpp  dispatcher.cpp  error.cpp  eventloop-integration.cpp  eventloop.cpp  message.cpp  object.cpp  property.cpp
G5/src/libdbus-c++-0.6.0.154.0/test/: Makefile.am
G5/src/libdbus-c++-0.6.0.154.0/tests/: test_connection.cpp  test_flood.h  test_flood_multi_dispatch.cpp  test_flood_sign.cpp  test_helpers.cpp  test_main.cpp  test_proxy_creation.cpp
G5/src/libdbus-c++-0.6.0.154.0/tools/: Makefile.am  generate_adaptor.cpp  generator_utils.cpp
G5/src/libdsmcc-3.1.4/: ChangeLog  Makefile.am  README  configure.ac
G5/src/libdsmcc-3.1.4/src/: Makefile.am  dsmcc-biop-ior.h  dsmcc-biop-message.c  dsmcc-biop-tap.h  dsmcc-cache-module.c  dsmcc-cache-module.h  dsmcc-cache.h  dsmcc-carousel.c  dsmcc-debug.h  dsmcc-descriptor.h  dsmcc-gii.h  dsmcc-ts.c  dsmcc-ts.h  dsmcc.c  dsmcc.h
G5/src/libdsmcc-3.1.4/tools/: Makefile.am
G5/src/lirc-0.8.3/doc/: Makefile.am  Makefile.in  lirc.hwdb
G5/src/sysfsutils-1.3.0/: AUTHORS  CREDITS  ChangeLog  Makefile.in  NEWS  README  aclocal.m4  config.h.in  config.h.in~  configure  configure.ac  install-sh  ltmain.sh  systool.1
G5/src/sysfsutils-1.3.0/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
G5/src/sysfsutils-1.3.0/cmd/: Makefile.am  Makefile.in  names.c  names.h  systool.c
G5/src/sysfsutils-1.3.0/docs/: libsysfs.txt
G5/src/sysfsutils-1.3.0/include/: dlist.h  libsysfs.h
G5/src/sysfsutils-1.3.0/lib/: Makefile.am  Makefile.in  dlist.c  sysfs.h  sysfs_bus.c  sysfs_class.c  sysfs_device.c  sysfs_dir.c  sysfs_driver.c  sysfs_utils.c
G5/src/sysfsutils-1.3.0/test/: Makefile.am  Makefile.in  create-test  dlist_test.c  get_bus_devices_list.c  get_class_dev.c  get_classdev_parent.c  get_device.c  get_driver.c  libsysfs.conf  test-defs.h  test.c  test_bus.c  test_class.c  test_dir.c  test_driver.c  test_root.c  test_utils.c  testout.c  write_attr.c
G5/src/toposet-1.1/src/: Makefile.am  toposet.c
G6/src/initng-0.6.10.2.2-r1/plugins/: CMakeLists.txt
G6/src/lirc-0.8.7_p5-r5/: ANNOUNCE  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  data2setup.sh  setup-driver.sh  setup.data  setup.sh
G6/src/lirc-0.8.7_p5-r5/contrib/: devinput.sh  lirc.m4
G6/src/lirc-0.8.7_p5-r5/daemons/: Makefile.am  Makefile.in  hw_accent.c  hw_alsa_usb.c  hw_atilibusb.c  hw_atwf83.c  hw_audio.c  hw_audio_alsa.c  hw_awlibusb.c  hw_bte.c  hw_caraca.c  hw_commandir.c  hw_commandir.h  hw_creative.c  hw_creative_infracd.c  hw_devinput.c  hw_dfclibusb.c  hw_dsp.c  hw_ea65.c  hw_ea65.h  hw_ftdi.c  hw_hiddev.c  hw_i2cuser.c  hw_iguanaIR.c  hw_irlink.c  hw_irlink.h  hw_irman.c  hw_livedrive_common.c  hw_livedrive_midi.c  hw_livedrive_seq.c  hw_logitech.c  hw_logitech.h  hw_mouseremote.c  hw_mouseremote.h  hw_mp3anywhere.c  hw_mplay.c  hw_mplay.h  hw_pcmak.c  hw_pcmak.h  hw_pinsys.c  (+24 more)
G6/src/lirc-0.8.7_p5-r5/doc/: Makefile.in  lirc.hwdb
G6/src/lirc-0.8.7_p5-r5/drivers/: Makefile.am  Makefile.common  Makefile.in  kcompat.h
G6/src/lirc-0.8.7_p5-r5/tools/: Makefile.am  Makefile.in  irsend.c  irxevent.c  lirc_client.c  lirc_client.h  lircrcd.c  mode2.c  pronto2lirc.py  xmode2.c
G6/src/toposet-1.1-r1/: COPYING  configure.ac
G6/src/toposet-1.1-r1/include/: config.h
G6/src/toposet-1.1-r1/src/: toposet_cmd.c
G6/src/zvbi-0.2.30.7-r1/contrib/: Makefile.am  ntsc-cc.c
G9/src/dbus-1.6.30.3-r1/tools/: .gitignore  Makefile.am  dbus-launch.c  dbus-monitor.c  dbus-print-message.c  dbus-wait-dbus.c  run-with-tmp-session-bus.sh
G9/src/initng-0.6.10.2.14/: AUTHORS  CMakeLists.txt
G9/src/initng-0.6.10.2.14/debian/: copyright  initng.install  postrm
G9/src/initng-0.6.10.2.14/devtool/: do_include_graph.sh  gdb-attach-init-2.6.15.patch  gdb-attach-init-2.6.16.18.patch  link_install.sh  package.sh
G9/src/initng-0.6.10.2.14/doc/: CODING_STANDARDS  EVENTS  FAQ  initng_release_method.txt  initng_version.txt
G9/src/initng-0.6.10.2.14/extras/: CMakeLists.txt
G9/src/initng-0.6.10.2.14/src/: CMakeLists.txt  initng_control_command.c  initng_control_command.h  initng_error.h  initng_event.c  initng_event.h  initng_event_types.c  initng_execute.c  initng_fd.c  initng_fork.c  initng_handler.c  initng_kill_handler.h  initng_main.c  initng_main.h  initng_msg.h  initng_service_cache.c  initng_service_cache.h  initng_service_types.h  initng_signal.c  initng_static_service_types.h  initng_static_states.c  initng_string_tools.h  initng_struct_data.c  initng_struct_data.h  initng_system_states.h  initng_toolbox.h  main.c
G9/src/initng-0.6.10.2.14/tools/: CMakeLists.txt  itool.c  itype.c
G9/src/libdbus-c++-0.6.0.154.14/: .gitignore  .hgignore  ChangeLog  Makefile.am  configure.ac
G9/src/libdbus-c++-0.6.0.154.14/doc/: chunk-apis.rst  chunk-dependencies.rst  chunk-howtomodify.rst  chunk-useflags.rst
G9/src/libdbus-c++-0.6.0.154.14/src/: Makefile.am  connection.cpp  debug.cpp  dispatcher.cpp  ecore-integration.cpp  glib-integration.cpp  object-manager.cpp  object.cpp  util.cpp
G9/src/libdbus-c++-0.6.0.154.14/tests/: Makefile.am  test_flood.cpp  test_flood_dynamic_proxy.cpp  test_flood_meth.cpp  test_helpers.h  test_main.cpp  test_pipe_deadlock.cpp  test_proxy.cpp  test_proxy_creation.cpp
G9/src/libdbus-c++-0.6.0.154.14/tools/: dbusxx-xml2doc.in  generate_adaptor.cpp  generate_proxy.cpp  generate_proxy.h  generator_utils.cpp
G9/src/libdsmcc-3.1.5-r3/src/: Makefile.am  dsmcc-cache-file.h  dsmcc-descriptor.c  dsmcc-section.h  dsmcc-util.c
G9/src/lxc-genesis-1.1.4/: .gitignore  AUTHORS  COPYING  ChangeLog  Doxyfile.in  Makefile.am  README  configure.ac  lxc_genesis.pc.in  lxc_genesis_core.pc.in
(+16439 files in other folders)
