INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src ${CMAKE_BINARY_DIR} )

ADD_EXECUTABLE(killalli5 killalli5.c)

ADD_EXECUTABLE(itype itype.c)

IF(SERVICE_CACHE)
	ADD_EXECUTABLE(itool itool.c)
	TARGET_LINK_LIBRARIES(itool initng)
ENDIF(SERVICE_CACHE)

INSTALL_PROGRAMS(${SBIN_INSTALL_DIR} initng-segfault)
INSTALL_TARGETS(${SBIN_INSTALL_DIR} killalli5)
INSTALL_FILES(${SYSCONF_INSTALL_DIR}/initng FILES killall5-ignore)

IF(INSTALL_AS_INIT)
	ADD_EXECUTABLE(mountpoint mountpoint.c)
	INSTALL_TARGETS(${SBIN_INSTALL_DIR} mountpoint)

	ADD_EXECUTABLE(sulogin sulogin.c)
	TARGET_LINK_LIBRARIES(sulogin crypt)
	INSTALL_TARGETS(${SBIN_INSTALL_DIR} sulogin)

	SET_TARGET_PROPERTIES(killalli5 PROPERTIES POST_INSTALL_SCRIPT
		${CMAKE_CURRENT_BINARY_DIR}/create_links.cmake)

	CONFIGURE_FILE(
		"${CMAKE_CURRENT_SOURCE_DIR}/create_links.cmake.in"
		"${CMAKE_CURRENT_BINARY_DIR}/create_links.cmake"
		IMMEDIATE @ONLY)
ENDIF(INSTALL_AS_INIT)
