SUBDIRS( service daemon runlevel ) 

IF(BUILD_ALSO)
	ADD_SUBDIRECTORY( also )
ENDIF(BUILD_ALSO)

IF(BUILD_PRESCRIPT)
	ADD_SUBDIRECTORY( prescript )
ENDIF(BUILD_PRESCRIPT)

IF(BUILD_BASH_LAUNCHER)
	ADD_SUBDIRECTORY( bash_launcher )
ENDIF(BUILD_BASH_LAUNCHER)

IF(BUILD_CHDIR)
	ADD_SUBDIRECTORY( chdir )
ENDIF(BUILD_CHDIR)

IF(BUILD_CHROOT)
	ADD_SUBDIRECTORY( chroot )
ENDIF(BUILD_CHROOT)

IF(BUILD_CONFLICT)
	ADD_SUBDIRECTORY( conflict )
ENDIF(BUILD_CONFLICT)

IF(BUILD_CPOUT)
	ADD_SUBDIRECTORY( cpout )
ENDIF(BUILD_CPOUT)

IF(BUILD_CRITICAL)
	ADD_SUBDIRECTORY( critical )
ENDIF(BUILD_CRITICAL)

IF(BUILD_CTRLALTDEL)
	ADD_SUBDIRECTORY( ctrlaltdel )
ENDIF(BUILD_CTRLALTDEL)

IF(BUILD_DAEMON_CLEAN)
	ADD_SUBDIRECTORY( daemon_clean )
ENDIF(BUILD_DAEMON_CLEAN)

IF(BUILD_DBUS)
	PKGCONFIG(gio-unix-2.0 GIO_INCLUDE_DIR GIO_LINK_DIR GIO_LINK_FLAGS GIO_CFLAGS)
	PKGCONFIG(glib-2.0 GLIB_INCLUDE_DIR GLIB_LINK_DIR GLIB_LINK_FLAGS GLIB_CFLAGS)
	ADD_SUBDIRECTORY( dbus )
ENDIF(BUILD_DBUS)

IF(BUILD_DBUS_EVENT)
	ADD_SUBDIRECTORY( dbus_event )
ENDIF(BUILD_DBUS_EVENT)

IF(BUILD_DEBUG_COMMANDS)
	ADD_SUBDIRECTORY( debug_commands )
ENDIF(BUILD_DEBUG_COMMANDS)

IF(BUILD_EVENT)
	ADD_SUBDIRECTORY( event )
ENDIF(BUILD_EVENT)

IF(BUILD_ENVPARSER AND SERVICE_CACHE)
	ADD_SUBDIRECTORY( envparser )
ENDIF(BUILD_ENVPARSER AND SERVICE_CACHE)

IF(BUILD_FIND AND SERVICE_CACHE)
	ADD_SUBDIRECTORY( find )
ENDIF(BUILD_FIND AND SERVICE_CACHE)

IF(BUILD_FMON)
	ADD_SUBDIRECTORY( fmon )
ENDIF(BUILD_FMON)

IF(BUILD_FSTAT)
	ADD_SUBDIRECTORY( fstat )
ENDIF(BUILD_FSTAT)

IF(BUILD_HISTORY)
	ADD_SUBDIRECTORY( history )
ENDIF(BUILD_HISTORY)

IF(BUILD_IDLEPROBE)
	ADD_SUBDIRECTORY( idleprobe )
ENDIF(BUILD_IDLEPROBE)

IF(BUILD_INITCTL)
	ADD_SUBDIRECTORY( initctl )
ENDIF(BUILD_INITCTL)

IF(BUILD_INTERACTIVE)
	ADD_SUBDIRECTORY( interactive )
ENDIF(BUILD_INTERACTIVE)

IF(BUILD_IPARSER AND SERVICE_CACHE)
	ADD_SUBDIRECTORY( iparser )
ENDIF(BUILD_IPARSER AND SERVICE_CACHE)

IF(BUILD_LAST)
	ADD_SUBDIRECTORY( last )
ENDIF(BUILD_LAST)

IF(BUILD_LIMIT)
	ADD_SUBDIRECTORY( limit )
ENDIF(BUILD_LIMIT)

IF(BUILD_LOGFILE)
	ADD_SUBDIRECTORY( logfile )
ENDIF(BUILD_LOGFILE)

IF(BUILD_LOCKFILE)
	ADD_SUBDIRECTORY( lockfile )
ENDIF(BUILD_LOCKFILE)

IF(BUILD_NETDEV)
	ADD_SUBDIRECTORY( netdev )
ENDIF(BUILD_NETDEV)

IF(BUILD_NETPROBE)
	ADD_SUBDIRECTORY( netprobe )
ENDIF(BUILD_NETPROBE)

IF(BUILD_NGE)
	ADD_SUBDIRECTORY( nge )
ENDIF(BUILD_NGE)

IF(BUILD_NGC4)
	ADD_SUBDIRECTORY( ngc4 )
ENDIF(BUILD_NGC4)

IF(BUILD_NGCS)
	ADD_SUBDIRECTORY( ngcs )
ENDIF(BUILD_NGCS)

IF(BUILD_PAUSE)
	ADD_SUBDIRECTORY( pause )
ENDIF(BUILD_PAUSE)

IF(BUILD_PROVIDE)
	ADD_SUBDIRECTORY( provide )
ENDIF(BUILD_PROVIDE)

IF(BUILD_RELOAD)
	ADD_SUBDIRECTORY( reload )
ENDIF(BUILD_RELOAD)

IF(BUILD_RENICE)
	ADD_SUBDIRECTORY( renice )
ENDIF(BUILD_RENICE)

IF(BUILD_RLPARSER AND SERVICE_CACHE)
	ADD_SUBDIRECTORY( rlparser )
ENDIF(BUILD_RLPARSER AND SERVICE_CACHE)

IF(BUILD_SELINUX)
	ADD_SUBDIRECTORY( selinux )
ENDIF(BUILD_SELINUX)

IF(BUILD_SIMPLE_LAUNCHER)
	ADD_SUBDIRECTORY( simple_launcher )
ENDIF(BUILD_SIMPLE_LAUNCHER)

IF(BUILD_STCMD)
	ADD_SUBDIRECTORY( stcmd)
ENDIF(BUILD_STCMD)

IF(BUILD_STDOUT)
	ADD_SUBDIRECTORY( stdout )
ENDIF(BUILD_STDOUT)

IF(BUILD_SUID)
	ADD_SUBDIRECTORY( suid )
ENDIF(BUILD_SUID)

IF(BUILD_SYNCRON)
	ADD_SUBDIRECTORY( syncron )
ENDIF(BUILD_SYNCRON)

IF(BUILD_SYSLOG)
	ADD_SUBDIRECTORY( syslog )
ENDIF(BUILD_SYSLOG)

IF(BUILD_SYSREQ)
	ADD_SUBDIRECTORY( sysreq )
ENDIF(BUILD_SYSREQ)

IF(BUILD_UMASK)
    ADD_SUBDIRECTORY( umask )
ENDIF(BUILD_UMASK)

IF(BUILD_UNNEEDED)
	ADD_SUBDIRECTORY( unneeded )
ENDIF(BUILD_UNNEEDED)

